[package]
name = "echo-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "echo_backend"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
async-graphql = "7.0"
async-graphql-axum = "7.0"
async-trait = "0.1"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.8"
thiserror = "2.0"
anyhow = "1.0"
jsonwebtoken = "9.3"

[dependencies.uuid]
version = "1.0"
features = ["v4", "serde"]

[dev-dependencies]
rstest = "0.23"
mockall = "0.13"
tokio-test = "0.4"
